# Kinova-MICO2

./: .gitignore  Clear_Trajectory.vi  Close.vi  Get_Angular_Command.vi  Get_Angular_Position.vi  Get_Cartesian_Command.vi  Get_Cartesian_Position.vi  Get_Devices.vi  Get_FIFO.vi  Init_Fingers.vi  Kinova Labview Interface.aliases  Kinova Labview Interface.lvproj  Kinova Labview Interface.sln  Kinova MICO² USB.lvlib  Kinova MICO² USB.lvlps  Kinova MICO² USB.lvproj  Kinova MICO² USB.vipb  Kinova_Device.ctl  Move_Home.vi  Open.vi  Send_Basic_Trajectory.vi  Send_Trajectory.vi  Set_Active_Device.vi  Test.vi  Trajectory_Point.ctl  code.c  dir.mnu
KLInterface_Test/: KLInterface_Test.vcxproj.filters
Kinova Labview Interface/: Kinova Labview Interface.vcxproj  klinterface.cpp  klinterface.h
Kinova Labview Interface/Standalone/: vc142.idb
Public/: Close.vi  Open.vi  dir.mnu
Public/Configure/: Configure.mnu  Set_Active_Device.vi
Public/Device/: Get_Devices.vi  Set_Active_Device.vi
Public/Motion/: Clear_Trajectory.vi  Motion.mnu  Move_Home.vi  Send_Trajectory.vi
Public/Status/: Get_Angular_Command.vi  Get_Angular_Position.vi  Get_Cartesian_Command.vi  Get_Cartesian_Position.vi  Get_FIFO.vi  Status.mnu
Public/Utility/: Get_Devices.vi  Get_FIFO.vi  Init_Fingers.vi  Utility.mnu
dll/: Kinova Labview Interface.sln  KinovaDevice.ctl  Test.vi
dll/KLInterface_Test/: KLInterface_Test.cpp  KLInterface_Test.vcxproj
lib/: CMakeCache.txt  CMakeSettings.json  KLInterface.sln  build.ninja  cmake_install.cmake
lib/KLInterface_so/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
(+28 files in other folders)
